# Rust2

./: README.md
btreemap_proc/: Cargo.toml
btreemap_proc/src/: lib.rs
lab_1/: README.md
lab_2/: Cargo.toml
lab_2/src/: lib.rs  main.rs  part_2.rs  part_3.rs
lab_3/lab_3/: Cargo.toml
lab_3/lab_3/src/: lib.rs
lab_3/lab_3/tests/: user_repo_tests.rs
lab_3/src/: test.rs
lab_3/лаб2/: Cargo.toml
snippet/: Cargo.toml  config.toml  snippets.json
snippet/.cargo/: config.toml
snippet/src/: app.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  storage.rs
snippet/tests/: app_flow.rs  cli_add.rs  cli_delete.rs  cli_read.rs  macro_tests.rs  procedural_macro.rs  storage_json.rs  storage_sqlite.rs  url_download.rs
src/: main.rs
лаб2/src/: part_1.rs  part_2.rs
