[package]
name = "snippet"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.7"  
humantime-serde = "1.1"
env = "1.0.1"
clap = { version = "4.5.48", features = ["derive"] }
rusqlite = { version = "0.37", features = ["bundled"] }