[package]
name = "snippet"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.7"  
humantime-serde = "1.1"

clap = { version = "4.5.48", features = ["derive"] }
rusqlite = { version = "0.37", features = ["bundled"] }
thiserror = "2.0.17"
tracing = "0.1.43"
reqwest = { version = "0.12.24", features = ["blocking"] }
config = "0.13"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.7"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
mockito = "1"
serial_test = "2"

btreemap_proc = { path = "../btreemap_proc" }
